# wobblebot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  STAGE-1.1-COMPLETE.md  pyproject.toml  wobblebot.code-workspace
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: architect.agent.md  docs.agent.md  refactor.agent.md  tests.agent.md
.github/workflows/: docker-publish.yml
config/: README.md  settings.example.yml  wobblebot.example.yml
config/heuristic/: quant.yml
config/prompts/: arbitrator.md  gremlin.md  news.md  operator-compact.md  operator.md  quant-compact.md  quant-cot.md  quant.md  risk.md
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example
docs/architecture/: README.md  architecture-components.md  architecture-intro.md  constraints.md  context.md  cross-cutting.md  decisions.md  deployment.md  glossary.md  quality-attributes.md  ratified-decisions.md  retry-policy.md  risks.md  runtime-view.md  solution-strategy.md
docs/deploy/: Caddyfile.sample  encryption-at-rest.md  reverse-proxy.md
docs/implementation/: README.md  api-reference.md  changelog.md  coding-guidelines.md  deployment-guide.md  development-workflow.md  module-specs.md  operations.md  operator-guide.md
docs/planning/: README.md  experiment-4h-strategy-selection.md  future-ideas.md  milestones.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md  phase-6-summary.md  phase-7-summary.md  process.md  requirements.md  risks-plan.md  roadmap.md  stage-2.2-design.md  stage-5.1-design.md  stage-6.1-design.md  stage-7.1-design.md  stage-8.0-design.md  stage-8.1-design.md  stage-8.2-design.md  stage-8.3-design.md  stage-8.4-design.md  stage-8.5-advisor-cascade-design.md  stage-8.6-advisor-regime-reorientation-design.md  testing-plan.md
docs/reference/: advisor-llm-models.md  grid-backtest-findings-2026-05-29.md  grid-strategy-external-validation-2026-06-04.md  grid-strategy-research-synthesis-2026-05-30.md  kraken-api-reference.md  ollama-tag-verification.md  operator-llm-models.md  regime-detection-sweep-2026-05-30.md  regime-policy-sweep-2026-05-30.md  regime-switch-findings-2026-05-30.md  sweep-2026-05-25-reasoning-models.md  sweep-2026-05-27-nas-operator-models.md
docs/release/: v1.0-future-improvements.md  v1.0-incident-runbook.md  v1.0-known-limitations.md  v1.0-soak-runbook.md
scripts/: README.md  install-hooks.ps1  install-hooks.sh
src/wobblebot/: __init__.py
tests/: __init__.py  conftest.py  fixtures.py  test_import.py
tests/adapters/: test_anthropic_advisor.py  test_anthropic_assistant.py  test_cascading_advisor.py  test_cryptocompare_news.py  test_discord_transport.py  test_google.py  test_heuristic_advisor.py  test_kraken_adapter.py  test_kraken_get_ohlc.py  test_kraken_signing.py  test_kraken_trading.py  test_mock_exchange.py  test_moe_advisor.py  test_ollama.py  test_ollama_assistant.py  test_openai.py  test_rss_news.py  test_shadow_exchange.py  test_sqlite_advisor_suggestions.py  test_sqlite_conversation_turns.py  test_sqlite_grid_state.py  test_sqlite_news_items.py  test_sqlite_notifications.py  test_sqlite_notifier.py  test_sqlite_pending_commands.py  test_sqlite_price_snapshots.py  test_sqlite_storage.py  test_sqlite_storage_heartbeats.py  test_sqlite_storage_llm_calls.py  test_sqlite_storage_ohlc.py  test_sqlite_storage_price_snapshot_unique.py  test_sqlite_storage_users.py  test_sqlite_transfer_proposals.py  test_sqlite_transfer_results.py
tests/cli/: test_advise.py  test_apply.py  test_check.py  test_common_heartbeat.py  test_common_poll_loop.py  test_common_safe_shutdown.py  test_harvest.py  test_harvest_notifications.py  test_live_dead_mans_switch.py  test_live_notifications.py  test_live_openorders_batching.py  test_live_operator_poll.py  test_maintenance.py  test_news.py  test_news_close_sources.py  test_observe_auto_gap_fill.py  test_observe_backfill_args.py  test_observe_backfill_logs.py  test_operator.py  test_operator_close_transport.py  test_operator_ttl_expirer.py  test_preflight.py  test_recalibrate.py  test_shutdown_persistence.py  test_status.py  test_web.py
tests/config/: __init__.py  test_advisor_config.py  test_application_config.py  test_cli_configs.py  test_cli_log_file_path_defaults.py  test_example_invariants.py  test_example_parity.py  test_example_symbols.py  test_grid_config.py  test_heuristic_spec.py  test_kraken_config.py  test_llm_config.py  test_loader.py  test_logging.py  test_news_config.py  test_operator_config.py  test_prompts.py  test_resolver.py  test_safety_config.py  test_schedules.py  test_schema_drift.py  test_web_config.py
tests/domain/: test_exceptions.py  test_grid.py  test_llm_cost.py  test_models.py  test_news_item.py  test_ohlc_bar.py  test_users.py  test_value_objects.py
tests/integration/: test_cloud_llm_live.py  test_grid_engine_e2e.py  test_kraken_adapter_live.py  test_kraken_api_health.py  test_kraken_trading_live.py  test_phase5_operator_e2e.py
tests/ports/: __init__.py  test_advisor.py  test_assistant_types.py  test_operator_commands.py  test_operator_intent.py  test_operator_queries.py  test_operator_results.py  test_pending_command.py
tests/services/: test_aggregators.py  test_auto_apply.py  test_backfill.py  test_backuper.py  (+22 more)
tools/: check_dead_mans_switch.py  classify_models_for_cull.py  diagnose_phi4_mini_reasoning.py  diagnose_reasoning_model.py  first_real_trade.py  grid_backtest.py  heuristic_backtest.py  probe_advisor.py  probe_assistant.py  probe_discord_bot.py  probe_freejudge.py  profile_storage.py  pull_and_probe_advisors.py  pull_and_probe_assistants.py  regime_detection_sweep.py  regime_policy_sweep.py  regime_switch_backtest.py  run_advisor.py  run_cloud_check.py  run_moe_check.py  show_llm_costs.py  show_metrics.py  show_pending.py  show_proposals.py  show_suggestions.py  show_transfers.py  sweep_assistant_nas.py  sweep_reasoning_fixes.py
(+176 files in other folders)
