[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wobblebot"
version = "0.1.0"
description = "Deterministic, safety-first micro-trading system using hexagonal architecture"
authors = [
    {name = "WobbleBot Team"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["trading", "kraken", "hexagonal-architecture", "micro-trading"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-frontmatter>=1.1.0",
    # Stage 3.2.5 — RSS news ingestion. Battle-tested (15+ years),
    # MIT, handles RSS 0.9/1.0/2.0 + Atom 0.3/1.0 + malformed feeds
    # without us hand-rolling ~100 lines of XML edge-case handling.
    "feedparser>=6.0.0",
    # Stage 3.4b — cli/apply --commit rewrites the operator's
    # settings.yml in place. PyYAML round-tripping strips comments
    # and reorders keys; ruamel.yaml preserves both, which matters
    # because the example settings file is heavily commented with
    # operator-facing explanations.
    "ruamel.yaml>=0.18.0",
    # Stage 5.2 — Discord transport for the operator interaction
    # layer (ADR-013). 2.x is the current actively-maintained line;
    # pin major to avoid breaking-change drift. Gateway client used
    # only by cli/operator — cli/live stays Discord-ignorant per
    # ADR-013 decision 9.
    "discord.py>=2.3.0,<3",
    # Stage 7.1 — Phase 7 web UI (ADR-016 + ADR-017). FastAPI app
    # at src/wobblebot/web/ served by uvicorn from cli/web; Jinja2
    # for server-rendered HTML; python-multipart for form POSTs
    # (login + mutation flows); bcrypt for password hashing per
    # ADR-017; itsdangerous for the signed session cookie used by
    # Starlette's SessionMiddleware. Lockstep deps — bumping fastapi
    # without also bumping starlette / uvicorn breaks the middleware
    # chain. PINNED EXACTLY (not ranged): with unpinned fastapi, CI
    # installed a newer starlette that deprecated `httpx` for `httpx2`,
    # and the suite's `filterwarnings = ["error"]` turned that
    # StarletteDeprecationWarning into a test-collection error (CI != the
    # dev venv). `starlette` is listed explicitly so the resolver can't
    # float it. Dependabot proposes coordinated bumps; the CI gate tests them.
    "fastapi==0.136.1",
    "starlette==1.0.0",
    "uvicorn[standard]==0.47.0",
    "jinja2>=3.1.0,<4",
    "python-multipart>=0.0.12,<1",
    "bcrypt>=4.2.0,<5",
    "itsdangerous>=2.2.0,<3",
    # Stage 8.4 follow-up: fuzzy headline matching for news dedup
    # (cli/news pre-save filter). Faster + smaller-footprint than the
    # older thefuzz/fuzzywuzzy lineage; pure C extension.
    "rapidfuzz>=3.6.0,<4",
    # Stage 8.4 follow-up: zoneinfo database on Windows. Linux + macOS
    # have system zoneinfo files; Windows has none. PEP 615's stdlib
    # zoneinfo falls back to this package when the OS has no
    # timezone DB. Required for cli/web's settings page (operator-
    # selectable display timezone) on Windows hosts.
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Pinned EXACTLY so CI reproduces the dev venv: this tooling gates the
# Docker publish, and unpinned `>=` let CI install newer black / pylint /
# pytest-asyncio than local — a newer pylint reported a message at a line
# the disable comment didn't cover, failing the gate (see git log). Bumps
# come through Dependabot and are tested by the CI gate before merge.
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "black==26.3.1",
    "isort==8.0.1",
    "mypy==2.1.0",
    "pylint==4.0.5",
    "pylint-pydantic==0.4.1",
    "types-pyyaml==6.0.12.20260510",
    "python-dotenv==1.2.2",
]

[project.urls]
Documentation = "https://github.com/wobblebot/wobblebot/tree/main/docs"
Repository = "https://github.com/wobblebot/wobblebot"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wobblebot*"]
namespaces = false

# Ship cli/web's static assets + Jinja2 templates inside the wheel.
# Without this, `pip wheel .` only includes .py files and cli/web
# crashes at startup with "Directory 'static' does not exist".
# Discovered 2026-05-27 during NAS Docker deployment.
[tool.setuptools.package-data]
"wobblebot.web" = ["static/*", "templates/*"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["wobblebot"]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["tests/"]

# python-frontmatter ships no stubs / py.typed marker. Treat its public
# surface as Any inside our typed code; the prompt loader's own return
# type still propagates correctly because we wrap frontmatter's output
# in a Pydantic model.
[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

# feedparser ships no type stubs / py.typed marker. Same posture as
# frontmatter: treat its surface as Any inside our typed code; the
# RssNewsAdapter wraps every parsed entry in a Pydantic NewsItem
# before exposing it to callers, so the typing weakness is contained.
[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true

# ruamel.yaml ships partial stubs but the surface we use (round-tripping
# the YAML document) is permissively typed. Same containment posture as
# frontmatter: services/settings_rewriter wraps the library inside a
# typed function, so the Any-ness doesn't propagate.
[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=wobblebot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m",
    "not integration",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may hit external services)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.main]
max-line-length = 100
load-plugins = ["pylint_pydantic"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods (common in domain models)
    "W0107",  # unnecessary-pass — abstract-method bodies use docstring + pass idiomatically
    "R0801",  # duplicate-code — same idiom (`@abstractmethod` + Args/Returns/Raises docstring + `pass`)
              # trips this across every port; structurally unavoidable in a hex architecture
]
good-names = ["i", "j", "k", "ex", "db", "id"]
